@@ -1,5 +1,8 @@
+Minecraft X-Ray 2.7 Maintenance Branch 7 (2011.01.21)
+
   * Key mappings are now taken from a config file which will get
     generated automatically with the defaults if not present.
+  * Generate a tbz2 file for Linux/OSX folks
 
 Minecraft X-Ray 2.7 Maintenance Branch 6 (2011.01.19)
 
